<resources>
    <string name="app_name">Brandell2017Summer</string>
    <string name="hello">Hello Android Class</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_demo_fragment">Hello demo fragment</string>
    <string name="hello_work_fragment">Hello work fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_red_fragment">Hello red fragment</string>
    <string name="hello_blue_fragment">Hello blue fragment</string>
    <string name="hello_green_fragment">Hello green fragment</string>
    <string name="title_activity_scale_type">ScaleTypeActivity</string>
    <string name="fragment_quizzes">This fragment is used for quizzes</string>
    <string name="quiz_1">Quiz1</string>
    <string name="quiz_2">Quiz2</string>
    <string name="quiz_3">Quiz3</string>
    <string name="motivation">You can do it!</string>
    <string name="title_activity_radio_group">RadioGroupActivity</string>
</resources>
