<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brandellpetty.brandell2017summer.MainActivity">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/fragment_quizzes"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_below="@+id/activity_main_title"
        android:id="@+id/textView2" />


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/activity_main_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true">

       <Button
           android:layout_width="wrap_content"
           android:layout_height="60dp"
           android:layout_weight="0.35"
           android:text="@string/quiz_1"
           android:textAllCaps="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="0.35"
            android:text="@string/quiz_2"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="0.30"
            android:text="@string/quiz_3"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/motivation"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/activity_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_bg"
        android:text="Submit"
        android:layout_marginTop="11dp"
        android:onClick="submit"
        android:layout_below="@+id/activity_main_fragment"
        android:layout_alignParentStart="true" />




</RelativeLayout>
